--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -26,7 +26,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Run tests
-        run: mvn -B test verify -Pgenerate.reports.jacoco
+        run: ./mvnw -B test verify
       - name: Check quality with SonarCloud
         run: mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:sonar  -Dsonar.branch.name=$(echo "${{ github.ref }}" | tr '/' ' ' | awk '{ print $3 }')  -Dsonar.projectKey=$(echo "${{ github.repository }}" | tr '/' '_') -Dsonar.organization=${{ github.actor }} -Dsonar.host.url=https://sonarcloud.io -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
         env:
