--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Run tests
         run: ./mvnw -B javadoc:javadoc
       - name: Check quality with SonarCloud
-        run: mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:sonar  -Dsonar.branch.name=$(echo "${{ github.ref }}" | tr '/' ' ' | awk '{ print $3 }')  -Dsonar.projectKey=$(echo "${{ github.repository }}" | tr '/' '_') -Dsonar.organization=${{ github.actor }} -Dsonar.host.url=https://sonarcloud.io -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml -Dsonar.sources=src
+        run: mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:sonar  -Dsonar.branch.name=$(echo "${{ github.ref }}" | tr '/' ' ' | awk '{ print $3 }')  -Dsonar.projectKey=$(echo "${{ github.repository }}" | tr '/' '_') -Dsonar.organization=${{ github.actor }} -Dsonar.host.url=https://sonarcloud.io -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml -Dsonar.sources=src/main/java
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
