--- a/src/test/resources/plugin.xml
+++ b/src/test/resources/plugin.xml
@@ -21,7 +21,7 @@
       <requiresOnline>false</requiresOnline>
       <inheritedByDefault>true</inheritedByDefault>
       <phase>post-site</phase>
-      <implementation>docsite.mojo.DocsiteMojo</implementation>
+      <implementation>docsite.mojo.GenerateMojo</implementation>
       <language>java</language>
       <instantiationStrategy>per-lookup</instantiationStrategy>
       <executionStrategy>once-per-session</executionStrategy>
